--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+vulkano         = "0.33"
+vulkano-win     = "0.33"
+vulkano-shaders = "0.33"
+vulkano-util    = "0.33"
+winit           = "0.28"
+
+cgmath          = "0.18"
+glium           = "0.32.1"
+png             = "0.17"
+rand            = "0.8.4"
+ron             = "0.8"
+serde           = { version = "1.0", features = ["derive"] }
+
+tobj            = "4.0.0"
