--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,8 @@ vulkano-util    = "0.33"
 winit           = "0.28"
 
 cgmath          = "0.18"
-glium           = "0.32.1"
-png             = "0.17"
-rand            = "0.8.4"
-ron             = "0.8"
-serde           = { version = "1.0", features = ["derive"] }
-
 tobj            = "4.0.0"
+image           = "0.24.6"
+
+[profile.dev]
+opt-level = 3
