--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,13 @@ vulkano-util    = "0.33"
 winit           = "0.28"
 
 cgmath          = "0.18"
-tobj            = "4.0.0"
 image           = "0.24.6"
+anyhow          = "1.0.71"
+gltf            = "1.2.0"
+dataurl         = "0.1.2"
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.dev]
 opt-level = 3
