--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ image           = "0.24.6"
 anyhow          = "1.0.71"
 gltf            = "1.2.0"
 dataurl         = "0.1.2"
+itertools       = "0.11.0"
 
 [profile.dev.package."*"]
 opt-level = 3
